# terminalsort

./: Cargo.toml  LICENSE  README.md
docs/superpowers/plans/: 2026-04-03-terminalsort.md
docs/superpowers/specs/: 2026-04-03-terminalsort-design.md
src/: font.rs  layout.rs  lib.rs  main.rs  monitor.rs  picker.rs  pts.rs  state.rs  types.rs  x11.rs
tests/: font_tests.rs  layout_tests.rs  state_tests.rs
